--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
-<html>
 <html lang="zh_CN">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>venti1112 的小站</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
-    <h1>欢迎来到 venti1112 的小站</h1>
-    <a href="https://venti.qzz.io">venti.qzz.io</a>
-    <p>这是我的个人网站，欢迎访问！</p>
-    <p>提供以下服务：</p>
-    <ul>        
-        <li><a href="https://venti.qzz.io/rustdesk/">RustDesk 远程桌面服务器</a></li>
-    </ul>
+<body>
+    <nav>
+        <a href="/">首页</a>
+        <a href="rustdesk/">RustDesk</a>
+    </nav>
+    <div class="container">
+        <h1>欢迎来到 venti1112 的小站</h1>
+        <a href="https://venti.qzz.io">venti.qzz.io</a>
+        <p>这是我的个人网站，欢迎访问！</p>
+        <p>提供以下服务：</p>
+        <ul>        
+            <li><a href="rustdesk/">RustDesk 远程桌面服务器</a></li>
+        </ul>
+    </div>
 </body>
 </html>
