--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -1,17 +1,28 @@
 <!DOCTYPE html>
-<html>
-    <html lang="zh_CN">
+<html lang="zh_CN">
 <head>
     <meta charset="utf-8">
-	<title>Venti1112 的 RustDesk 服务器</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Venti1112 的 RustDesk 服务器</title>
+    <link rel="stylesheet" href="../assets/css/style.css">
 </head>
 <body>
-	<h1>Venti1112 的 RustDesk 服务器</h1>
-    <a href="https://venti.qzz.io/rustdesk/rustdesk windows_x64.exe">RustDesk 客户端下载（Windows x64）</a>
-    <a href="https://venti.qzz.io/rustdesk/rustdesk windows_x86.exe">RustDesk 客户端下载（Windows x86）</a>
-	<a href="https://venti.qzz.io/rustdesk/rustdesk android_arm64.apk">RustDesk 客户端下载（Android ARM64）</a>
-    <a href="https://venti.qzz.io/rustdesk/rustdesk android_armv7.apk">RustDesk 客户端下载（Android ARMv7）</a>
-    <p>服务器连接配置代码：9JSPj1WZoB1V2tEZpdVRkZjdOFVMKRGWitCSMFFblBlWsF3QuR3KvlUcuVGM1IiOikXZrJCLiIiOikGchJCLi8Wauonex5Sa05WZ25CZyJiOikXYsVmciwiIvlmL6pXcukGduVmduQmciojI0N3boJye</p>
-    <p>请使用上述地址配置您的 RustDesk 客户端以连接到此服务器。</p>
+    <nav>
+        <a href="../">首页</a>
+        <a href="../rustdesk/">RustDesk</a>
+    </nav>
+    <div class="container">
+        <h1>Venti1112 的 RustDesk 服务器</h1>
+        <div class="download-links">
+            <a href="rustdesk windows_x64.exe">RustDesk 客户端下载（Windows x64）</a>
+            <a href="rustdesk windows_x86.exe">RustDesk 客户端下载（Windows x86）</a>
+            <a href="rustdesk android_arm64.apk">RustDesk 客户端下载（Android ARM64）</a>
+            <a href="rustdesk android_armv7.apk">RustDesk 客户端下载（Android ARMv7）</a>
+        </div>
+        <div class="server-config">
+            <p>服务器连接配置代码：9JSPj1WZoB1V2tEZpdVRkZjdOFVMKRGWitCSMFFblBlWsF3QuR3KvlUcuVGM1IiOikXZrJCLiIiOikGchJCLi8Wauonex5Sa05WZ25CZyJiOikXYsVmciwiIvlmL6pXcukGduVmduQmciojI0N3boJye</p>
+            <p>请使用上述地址配置您的 RustDesk 客户端以连接到此服务器。</p>
+        </div>
+    </div>
 </body>
 </html>
