--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div class="container">
         <h1>欢迎来到 venti1112 的小站</h1>
         <p>这是我的个人网站，欢迎访问！</p>
+        <p>我的邮箱：venti111112@qq.com</p>
         <p>提供以下服务：</p>
         <ul>        
             <li><a href="rustdesk/">RustDesk 远程桌面服务器</a></li>
