--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <nav>
         <img src="/favicon.jpg" alt="venti1112头像" class="nav-avatar" style="width: 40px; height: 40px; border-radius: 50%; border: 2px solid white; margin-right: 1rem;">
-        <span class="nav-username">venti1112</span>
-        <a href="/">首页</a>
-        <a href="/rustdesk/">RustDesk</a>
+        <span class="nav-username" style="font-size: 1.1rem; line-height: 1.5; margin-right: 1.5rem;">venti1112的小站</span>
+        <a href="/" style="font-size: 1.1rem; line-height: 1.5;">首页</a>
+        <a href="/rustdesk/" style="font-size: 1.1rem; line-height: 1.5;">RustDesk</a>
     </nav>
     <div class="container">
         <h1>欢迎来到 venti1112 的小站</h1>
