添加加载动画和淡出效果，优化页面过渡体验，修复了一些错误

--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>venti1112 的小站</title>
+    <title>venti1112的小站</title>
     <link rel="icon" type="image/jpg" href="/assets/image/favicon.jpg">
     <link rel="stylesheet" href="/assets/css/main.css">
 </head>
 <body>
     <nav>
         <img src="/assets/image/favicon.jpg" alt="venti1112头像" class="nav-avatar">
-        <span class="nav-username">venti1112的小站</span>
         <a href="/">首页</a>
-        <a href="/rustdesk/">RustDesk</a>
+        <a href="/rustdesk/">RustDesk服务器</a>
     </nav>
     <div class="container">
         <h1>欢迎来到 venti1112 的小站</h1>
@@ -20,8 +19,9 @@
         <p>我的邮箱：venti111112@qq.com</p>
         <p>提供以下服务：</p>
         <ul>        
-            <li><a href="/rustdesk/">RustDesk 远程桌面服务器</a></li>
+            <li><a href="/rustdesk/">RustDesk远程桌面服务器</a></li>
         </ul>
     </div>
+    <script src="/assets/js/main.js"></script>
 </body>
 </html>
