--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -10,19 +10,18 @@
 <body>
     <nav>
         <img src="/assets/image/favicon.jpg" alt="venti1112头像" class="nav-avatar">
-        <span class="nav-username">venti1112</span>
         <a href="/">首页</a>
-        <a href="/rustdesk/">RustDesk</a>
+        <a href="/rustdesk/">RustDesk服务器</a>
     </nav>
     <div class="container">
-        <h1>Venti1112 的 RustDesk 服务器</h1>
+        <h1>Venti1112的RustDesk服务器</h1>
         <div class="server-config">
             <div class="config-code">
                 <p>服务器连接配置代码：</p>
                 <div class="code-box" id="serverCode">9JSPj1WZoB1V2tEZpdVRkZjdOFVMKRGWitCSMFFblBlWsF3QuR3KvlUcuVGM1IiOikXZrJCLiIiOikGchJCLi8Wauonex5Sa05WZ25CZyJiOikXYsVmciwiIvlmL6pXcukGduVmduQmciojI0N3boJye</div>
                 <button class="copy-btn" onclick="copyServerCode()">复制代码</button>
             </div>
-            <p>请使用上述地址配置您的 RustDesk 客户端以连接到此服务器。</p>
+            <p>请将上述连接配置代码导入您的RustDesk客户端以连接到此服务器。</p>
         </div>
         <div class="download-box">
             <h3>客户端下载</h3>
@@ -31,10 +30,12 @@
                 <a href="rustdesk windows_x86.exe">Windows x86</a>
                 <a href="rustdesk android_arm64.apk">Android ARM64</a>
                 <a href="rustdesk android_armv7.apk">Android ARMv7</a>
+                
             </div>
         </div>
         <div class="github-link">
-            <p>RustDesk 开源项目: 
+            <p>更多客户端下载请访问 <a href="https://rustdesk.com/zh-cn/download/" target="_blank">RustDesk官方下载页面</a></p>
+            <p>RustDesk开源项目: 
                 <a href="https://github.com/rustdesk/rustdesk/" target="_blank">GitHub 仓库</a> | 
                 <a href="https://rustdesk.com/zh-cn/" target="_blank">官方网站</a>
             </p>
