添加关于我页面，并在导航中增加链接

--- a/about.html
+++ b/about.html
@@ -15,14 +15,12 @@
         <a href="/rustdesk/">RustDesk服务器</a>
     </nav>
     <div class="container">
-        <h1>欢迎来到venti1112的小站</h1>
-        <p>这里是venti1112的小站，畜衷牲一个，是方块人，旅行者，开拓者，绳匠，舰长，大爱巴巴托斯大人！热爱计算机（但是是个大笨蛋！）</p>
+        <h1>关于我</h1>
+        <p style="color:red;"><strong>提示：该页面未建设完成！！！</strong></p>
+        <p>畜衷牲一个，是方块人，旅行者，开拓者，绳匠，舰长，大爱巴巴托斯大人！热爱计算机（但是是个大笨蛋！）</p>
         <p>邮箱：3788365896@qq.com</p>
         <p>QQ：3788365896</p>
-        <p>提供以下服务：</p>
-        <ul>        
-            <li><a href="/rustdesk/">RustDesk远程桌面服务器</a></li>
-        </ul>
+        <p>GitHub：https://github.com/venti1112</p>
     </div>
     <script src="/assets/js/main.js"></script>
 </body>
