--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -11,6 +11,7 @@
     <nav>
         <img src="/assets/image/favicon.jpg" alt="venti1112头像" class="nav-avatar">
         <a href="/">首页</a>
+        <a href="/about.html">关于我</a>
         <a href="/rustdesk/">RustDesk服务器</a>
     </nav>
     <div class="container">
