添加RustDesk客户端下载链接和相关信息，优化下载体验

--- a/index.html
+++ b/index.html
@@ -50,6 +50,22 @@
             </div>
             <p>请将上述连接配置代码导入您的RustDesk客户端以连接到此服务器。</p>
         </div>
+        <div class="download-box">
+            <h3>客户端下载</h3>
+            <div class="download-links">
+                <a href="/rustdesk/rustdesk_windows_x64.exe" class="no-loading">Windows x64</a>
+                <a href="/rustdesk/rustdesk_windows_x86.exe" class="no-loading">Windows x86</a>
+                <a href="/rustdesk/rustdesk_android_arm64.apk" class="no-loading">Android ARM64</a>
+                <a href="/rustdesk/rustdesk_android_armv7.apk" class="no-loading">Android ARMv7</a>
+            </div>
+        </div>
+        <div class="github-link">
+            <p>更多客户端下载请访问 <a href="https://rustdesk.com/zh-cn/download/" target="_blank">RustDesk官方下载页面</a></p>
+            <p>RustDesk开源项目: 
+                <a href="https://github.com/rustdesk/rustdesk/" target="_blank">GitHub 仓库</a> | 
+                <a href="https://rustdesk.com/zh-cn/" target="_blank">官方网站</a>
+            </p>
+        </div>
     </div>
     <script src="/assets/js/page-switch.js"></script>
     <script src="/assets/js/copy.js"></script>
