--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="config-code">
                 <p>服务器连接配置代码：</p>
                 <div class="code-box" id="serverCode">9JSPj1WZoB1V2tEZpdVRkZjdOFVMKRGWitCSMFFblBlWsF3QuR3KvlUcuVGM1IiOikXZrJCLiIiOikGchJCLi8Wauonex5Sa05WZ25CZyJiOikXYsVmciwiIvlmL6pXcukGduVmduQmciojI0N3boJye</div>
-                <button class="copy-btn" onclick="copyServerCode()">复制代码</button>
+                <button class="copy-btn" onclick="copyServerCode(event)">复制代码</button>
             </div>
             <p>请将上述连接配置代码导入您的RustDesk客户端以连接到此服务器。</p>
         </div>
