--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="nav-underline"></div>
         </div>
     </nav>
-    <div class="container page-content" id="home">
+    <div class="container page-content" id="home" page-title="首页">
         <h1>欢迎来到venti1112的小站</h1>
         <p>这里是venti1112的小站，畜衷牲一个，是方块人，旅行者，开拓者，绳匠，舰长，大爱巴巴托斯大人！热爱计算机（但是是个大笨蛋！）</p>
         <li><a href="#about">关于我</a></li>
@@ -71,7 +71,7 @@
             <li><a href="#rustdesk">RustDesk远程桌面服务器</a></li>
         </ul>
     </div>
-    <div class="container page-content" id="about">
+    <div class="container page-content" id="about" page-title="关于我">
         <h1>关于我</h1>
         <p style="color:red;"><strong>提示：该页面未建设完成！！！</strong></p>
         <p>畜衷牲一个，是方块人，旅行者，开拓者，绳匠，舰长，大爱巴巴托斯大人！热爱计算机（但是是个大笨蛋！）</p>
@@ -80,7 +80,7 @@
         <p>GitHub：https://github.com/venti1112</p>
         <p>Steam：https://steamcommunity.com/profiles/76561199731450262/</p>
     </div>
-    <div class="container page-content" id="rustdesk">
+    <div class="container page-content" id="rustdesk" page-title="RustDesk服务器">
         <h1>Venti1112的RustDesk服务器</h1>
         <div class="server-config">
             <div class="config-code">
@@ -93,13 +93,13 @@
         <div class="download-box">
             <h3>客户端下载</h3>
             <div class="download-links">
-                <a href="/rustdesk/rustdesk_windows_x64.exe" class="no-loading">Windows x64</a>
-                <a href="/rustdesk/rustdesk_windows_x86.exe" class="no-loading">Windows x86</a>
-                <a href="/rustdesk/rustdesk_android_arm64.apk" class="no-loading">Android ARM64</a>
-                <a href="/rustdesk/rustdesk_android_armv7.apk" class="no-loading">Android ARMv7</a>
+                <a href="/rustdesk/rustdesk_windows_x64.exe">Windows x64</a>
+                <a href="/rustdesk/rustdesk_windows_x86.exe">Windows x86</a>
+                <a href="/rustdesk/rustdesk_android_arm64.apk">Android ARM64</a>
+                <a href="/rustdesk/rustdesk_android_armv7.apk">Android ARMv7</a>
             </div>
         </div>
-        <div class="github-link">
+        <div>
             <p>更多客户端下载请访问 <a href="https://rustdesk.com/zh-cn/download/" target="_blank">RustDesk官方下载页面</a></p>
             <p>RustDesk开源项目: 
                 <a href="https://github.com/rustdesk/rustdesk/" target="_blank">GitHub 仓库</a> | 
