--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
     </nav>
     <div class="container page-content" id="home" page-title="首页">
         <h1>欢迎来到venti1112的小站</h1>
-        <p>这里是venti1112的小站，畜衷牲一个，是方块人，旅行者，开拓者，绳匠，舰长，大爱巴巴托斯大人！热爱计算机（但是是个大笨蛋！）</p>
-        <li><a href="#about">关于我</a></li>
+        <p>这里是venti1112的小站，<a href="#about">关于我</a></p>
         <p>目前提供以下服务：</p>
         <ul>        
             <li><a href="#rustdesk">RustDesk远程桌面服务器</a></li>
