更新了页面中的客户端下载链接，指向最新的 1.4.3 版本发布地址镜像，同时移除了旧的本地二进制文件引用。

--- a/index.html
+++ b/index.html
@@ -91,11 +91,31 @@
         </div>
         <div class="download-box">
             <h3>客户端下载</h3>
+            <p>当前版本：1.4.3 更新时间：2025-10-18</p>
             <div class="download-links">
-                <a href="/rustdesk/rustdesk_windows_x64.exe">Windows x64</a>
-                <a href="/rustdesk/rustdesk_windows_x86.exe">Windows x86</a>
-                <a href="/rustdesk/rustdesk_android_arm64.apk">Android ARM64</a>
-                <a href="/rustdesk/rustdesk_android_armv7.apk">Android ARMv7</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-x86_64.exe">Windows x64</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-x86-sciter.exe">Windows x86 (Sciter)</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-aarch64-signed.apk">Android ARM64</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-armv7-signed.apk">Android ARMv7</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-universal-signed.apk">Android Universal</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-x86_64-signed.apk">Android x64</a>
+                <a href="https://apps.apple.com/us/app/rustdesk-remote-desktop/id1581225015">iOS</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-x86_64.dmg">Mac x64</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-aarch64.dmg">Mac ARM64</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-x86_64.AppImage">AppImage x64</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-aarch64.AppImage">AppImage ARM64</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-x86_64.deb">Ubuntu/Debian x64</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-x86_64-sciter.deb">Ubuntu/Debian x64 (Sciter)</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-aarch64.deb">Ubuntu/Debian ARM64</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-armv7-sciter.deb">Ubuntu/Debian ARMv7 (Sciter)</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-x86_64.flatpak">Flatpak x64</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-x86_64-sciter.flatpak">Flatpak x64 (Sciter)</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-aarch64.flatpak">Flatpak ARM64</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-0.x86_64.rpm">Fedora/RHEL x64</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-0.aarch64.rpm">Fedora/RHEL ARM64</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-0.x86_64-suse.rpm">Suse Linux x64</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-0.aarch64-suse.rpm">Suse Linux ARM64</a>
+                <a href="https://xget.xi-xu.me/gh/rustdesk/rustdesk/releases/download/1.4.3/rustdesk-1.4.3-0-x86_64.pkg.tar.zst">Arch Linux</a>
             </div>
         </div>
         <div>
