--- a/index.html
+++ b/index.html
@@ -1,64 +1,128 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
+    <!-- 文档字符编码声明 -->
     <meta charset="UTF-8">
+    <!-- 响应式视口设置 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- 页面标题 -->
     <title>venti1112的小站</title>
+    <!-- 网站图标 -->
     <link rel="icon" type="image/jpg" href="/assets/image/favicon.jpg">
+    <!-- Bootstrap CSS框架 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <!-- Bootstrap Icons字体图标 -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+    <!-- 主样式表 -->
     <link rel="stylesheet" href="/assets/css/main.css">
+    <!-- Bootstrap JavaScript捆绑包 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous" defer></script>
+    <!-- 页面过渡动画脚本 -->
     <script src="/assets/js/page-transition.js" defer></script>
+    <!-- 主题切换脚本 -->
     <script src="/assets/js/theme.js" defer></script>
+    <!-- 代码复制功能脚本 -->
     <script src="/assets/js/copy.js" defer></script>
-    <!-- 预加载页面资源 -->
+    <!-- 预加载页面以提升用户体验 -->
     <link rel="preload" href="/page/home.html" as="document">
     <link rel="preload" href="/page/about.html" as="document">
     <link rel="preload" href="/page/rustdesk.html" as="document">
+    <!-- 页面加载动画样式 -->
+    <style>
+        #loading-screen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #000000;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+            transition: opacity 0.3s;
+        }
+        .loader {
+            border: 10px solid #4cd8b8;
+            border-top: 10px solid #156c54;
+            border-radius: 50%;
+            width: 60px;
+            height: 60px;
+            animation: spin 1s linear infinite;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+        .loading-text {
+            margin-top: 20px;
+            color: #4cd8b8;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            font-size: 30px;
+            font-weight: bold;
+        }
+    </style>
 </head>
 <body class="bg-primary">
-    <!-- 导航栏 -->
-    <nav class="navbar navbar-expand-lg navbar-dark">
+    <!-- 全屏加载屏幕，在页面完全加载前显示 -->
+    <div id="loading-screen" aria-live="polite" aria-label="页面加载中">
+        <div class="loader" role="status"></div>
+        <p class="loading-text">加载中...</p>
+    </div>
+
+    <!-- 导航栏组件：包含网站Logo、移动端菜单按钮和导航链接 -->
+    <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <!-- Logo -->
             <a class="navbar-brand" href="#home">
-            <img src="/assets/image/favicon.jpg" alt="venti1112的小站">
+                <img src="/assets/image/favicon.jpg" alt="venti1112的小站">
             </a>
-            <!-- 移动端汉堡菜单按钮 -->
+            <!-- 移动端汉堡菜单按钮，用于展开/收起导航菜单 -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-            <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
-            <!-- 菜单 -->
+            <!-- 导航菜单内容 -->
             <div class="collapse navbar-collapse" id="navbarContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link active" href="#home" data-page="home">首页</a></li>
-                <li class="nav-item"><a class="nav-link" href="#about" data-page="about">关于</a></li>
-                <li class="nav-item"><a class="nav-link" href="#rustdesk" data-page="rustdesk">RustDesk服务器</a></li>
-            </ul>
-            <div class="nav-underline"></div>
-            <!-- 右边功能区 -->
-            <form class="d-flex">
-                <!-- 深色模式切换按钮 -->
-                <button class="btn btn-outline-secondary theme-toggle-btn" id="themeToggle" type="button"
-                    data-bs-theme-value="dark"
-                    aria-label="切换深色模式">
-                    <i class="bi bi-moon"></i>
-                </button>
-            </form>
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link active" href="#home" data-page="home">首页</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about" data-page="about">关于</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#rustdesk" data-page="rustdesk">RustDesk服务器</a></li>
+                </ul>
+                <div class="nav-underline"></div>
+                <!-- 右侧功能区：主题切换按钮 -->
+                <form class="d-flex">
+                    <!-- 深色模式切换按钮 -->
+                    <button class="btn btn-outline-secondary theme-toggle-btn" id="themeToggle" type="button"
+                        data-bs-theme-value="dark"
+                        aria-label="切换深色模式">
+                        <i class="bi bi-moon"></i>
+                    </button>
+                </form>
+            </div>
         </div>
-    </div>
     </nav>
 
-    <!-- 主要内容区域 -->
+    <!-- 主要内容区域：动态加载各页面内容 -->
     <main class="content-box" id="content-box">
-        <!-- 内容加载中提示 -->
+        <!-- 内容加载中提示，当页面切换时显示 -->
         <div id="content-loading" class="content-loading" style="display: none;" aria-live="polite">
             <div class="loader" style="border-width: 5px; width: 40px; height: 40px;" role="status"></div>
             <p class="loading-text" style="margin-top: 10px; color: #156c54; font-size: 16px;">加载中...</p>
         </div>
-        <!-- 页面内容容器 -->
+        <!-- 页面内容容器，通过JavaScript动态填充 -->
         <div id="page-content" role="main"></div>
     </main>
+
+    <!-- 页面加载完成后的隐藏加载屏幕脚本 -->
+    <script>
+        window.addEventListener('load', function() {
+            const loadingScreen = document.getElementById('loading-screen');
+            loadingScreen.style.opacity = '0';
+            setTimeout(() => {
+                loadingScreen.style.display = 'none';
+            }, 300);
+        });
+    </script>
 </body>
 </html>
